k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scv-backend-svc
  namespace: scv
spec:
  selector:
    app: scv-backend
  ports:
    - port: 80
      targetPort: 4000
  type: ClusterIP
